accessories menu added

--- a/4x4ElectricWheelchairs.html
+++ b/4x4ElectricWheelchairs.html
@@ -21,10 +21,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
 	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
@@ -134,10 +134,10 @@
 				<!-- ITEM FILTERS -->
 				<ul class="list-inline portfolio-item-filters">
 					<li><a class="active" href="#" data-filter="*">ALL</a></li>
-					<li><a href="#" data-filter=".design">THE BEST</a></li>
-					<li><a href="#" data-filter=".photography">THE SECOND BEST</a></li>
-					<li><a href="#" data-filter=".ui">SOME COOL STUFF</a></li>
-					<li><a href="#" data-filter=".ux">SOME OTHER COOL STUFF</a></li>
+					<li><a href="#" data-filter=".design">MAXIMUS</a></li>
+					<li><a href="#" data-filter=".photography">OFF ROAD</a></li>
+					<li><a href="#" data-filter=".ui">OPTIMUS</a></li>
+					<li><a href="#" data-filter=".ux">R-SERIES</a></li>
 				</ul>
 				<!-- END ITEM FILTERS -->
 				<!-- PORTFOLIO ITEM WRAPPER -->
@@ -154,7 +154,7 @@
 								<img src="assets/img/portfolio/800x800/OB-EW-001.png" alt="The Maximux 800x800 thumbnail">
 							</div>
 						</li>
-						<li class="portfolio-item ux">
+						<li class="portfolio-item photography">
 							<div class="overlay"></div>
 							<div class="info">
 								<h4 class="title">Off Road</h4>
@@ -165,7 +165,7 @@
 								<img src="assets/img/portfolio/800x800/OB-EW-002.png" alt="The Off Road 800x800 thumbnail">
 							</div>
 						</li>
-						<li class="portfolio-item photography">
+						<li class="portfolio-item ui">
 							<div class="overlay"></div>
 							<div class="info">
 								<h4 class="title">Optimus</h4>
@@ -176,7 +176,7 @@
 								<img src="assets/img/portfolio/800x800/OB-EW-003.jpg" alt="Optimus 800x800 thumbnail">
 							</div>
 						</li>
-						<li class="portfolio-item photography ux">
+						<li class="portfolio-item ux">
 							<div class="overlay"></div>
 							<div class="info">
 								<h4 class="title">R-020</h4>
@@ -187,7 +187,7 @@
 								<img src="assets/img/portfolio/800x800/OB-EW-020.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
-						<li class="portfolio-item photography ui">
+						<li class="portfolio-item ux">
 							<div class="overlay"></div>
 							<div class="info">
 								<h4 class="title">R-030</h4>
