--- a/OB-EW-001.html
+++ b/OB-EW-001.html
@@ -21,10 +21,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
 	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
@@ -122,7 +122,7 @@
 				<h1 class="page-title pull-left">Maximus: OB-EW-001</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Products</a></li>
-					<li><a href="#">4x4 Electric Wheelchairs</a></li>
+					<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 					<li class="active">Maximus: OB-EW-001</li>
 				</ol>
 			</div>
@@ -142,7 +142,49 @@
 						<section>
 							<h2 class="section-heading">Maximus: OB-EW-001 DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
-							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
+							<p>
+
+  OB-EW-001 Maximus , Unique 4x4 wheelchair is equipped with gyroscope that allows you to synchronize the angle of your seat in relations to the ground (including such obstacles as stairs, borders etc.) Therefore, you feel safe and balanced, and in total control of your movements. Finally you can fully enjoy the world around you!
+
+1. Gyroscope.  Observer is the first 4WD electric wheel-chair equipped with an auto-gradiometer allowing your center of gravity to change according to the angle of the surface.
+When moving up and down the stairs or a hill, the chair permits you to stay in the same position as if you were driving on a flat surface, which in turn makes diving more secure and comfortable. Our unique and patented gyroscope chair guarantees your convenience and safety.
+
+2. Ability to move up the staircase
+Observer Maximus 4WD electrical chair -rover is able to climb and descend the stairs up to 25º degrees and stairs as high as 15-17cm (5.9 - 6.7 inches) and normal slope up to 45º without any help.
+
+3. Overcoming the obstacles. Thanks to the change of the center of gravity during the movement, constant full-wheel drive and super-powerful engines (2.5 kw total) our wheel-chair is able to clime up to 45º degree track angle.
+
+4. U-turn function. Observer Maximus - one and only electric wheel-chair able to make 360° U-turn at the spot, with a radius of only 49cm. Therefore you can make turns in narrow and small spaces, for example, in a hallway.
+
+5. Battery life .   4pcs of Li-batteries (with a capacity of 27a/hr each) can provide up to 20 km (12.4274 miles) of climbing and driving on rough terrain, and up to 30 km (18.6411 miles) on straight and hard road surface.
+
+6. Unique balance. All batteries are located evenly, along the longitudinal axis of the lower part of the gear wheels. Powerful (1200Wt each) and heavy engines are also placed not higher then the axis of the wheels. Due to the following design our engineers were able to achieve unprecedentedly low position of the center of gravity on the chair, which in turn provides it with perfect stability (using the principle of tumbler toy). The angle of a rolling stability is <30. Thanks to it’s short base, the wheel-chair is able to climb bigger ramp angles than any other kind of wheel-chair.
+
+7. The first and foremost advantage of all-wheel drive and special designed hard tires is its improved capacity to drive on sand, snow and grass surfaces. Also, the transversal tread of the wheels grabs tightly even to the most worn out surfaces. Finally your access area is not limited only to flat and hard surfaces. Any rough terrain becomes open to you with our electric 4WD wheel-chair. Finally, you have the ability to go wherever you wish to go, break away from your usual routs outside your home.
+
+8. Silicone type batteries. In comparison with the usual lead acid batteries, Silicone batteries are incorrigible and environmentally friendly. Silicone batteries are perfect at work and optimized for hard duty and life-long usages. It has a great resource of energy for constant or seldom use. New generation silicate compound electrolyte is non -hazardous and environmentally friendly. Its Silicone structure does not allow for leakage, even if the batteries are upside down.
+
+From certificate of air transportation:
+
+These batteries meet the standard for special regulation A67 of International Civil Aviation Organization. Silicone batteries are excluded from a list of Dangerous Cargoes and classified as “non-spoilable”.
+
+9. Modern lighting equipment.
+•LED backlights save energy, front lights give bright illumination while driving in the dark.
+•Rear LED makes Observer visible while driving on the road, and side LED – while crossing it.
+10. Best correlation of power and weight in 4WD class wheel-chairs.
+11. Stable operations in any weather conditions. All systems of wheel-chair have been tasted to work optimally at -15 C (F 5). The engine works great even at +39 C (F 102.2) in shadow.
+12. The back of the seat folds forward for moving purposes, and bands back in any angle for user's comfort. The seat itself is super comfortable and is made from high-quality materials
+13. Comfortable throw back armrests are adjustable by height, width and angles. Comfortable and adjustable headrest.
+
+14. Joystick is made by PG R-NET (Great Britain) - global leader of electronic control systems manufacturing:
+•It is agronomical and easy to use; provides uninterrupted and safe work of control system.
+•It is able to save individual settings for user's convenience.
+•It is compatible with external devices.
+•The joystick support system is designed to move back and forth, change the angle, or move to the side for external use.
+easy movement from right armrest to the left.
+15. We have several basic colors of wheel-chair frame of your choice
+
+</p>
 						</section>
 					</div>
 					<div class="col-md-4">
