--- a/OB-EW-002.html
+++ b/OB-EW-002.html
@@ -21,10 +21,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
 	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
@@ -122,7 +122,7 @@
 				<h1 class="page-title pull-left">Off Road: OB-EW-002</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Products</a></li>
-					<li><a href="#">4x4 Electric Wheelchairs</a></li>
+					<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 					<li class="active">Off Road: OB-EW-002</li>
 				</ol>
 			</div>
@@ -142,7 +142,28 @@
 						<section>
 							<h2 class="section-heading">Off Road: OB-EW-002 DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
-							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
+							<p>OB-EW-002 Our unique 4WD Wheelchair equips with gyroscope, it adjusts the user’s body center of gravity to the level of the ground according to the various out-door terrain (such as curbs, stairs, pithead, uneven field, sand beach, grass field). So, you will feel balanced and safe. That gives real independence to the disabled people to choose any way to go. Now you can fully enjoy wonderful world around you!
+
+This modification of wheel-chair have special cross-country tires. Now will be easy for you to drive on the beach by yourself and you will not get stuck in a sand!
+
+Functions
+
+1. This wheel-chair is able to climb and descend on max slopes angle 45 .Gyroscope adjusted under your seat will keep your body in straight position to horizon.
+
+2. Our wheel-chair can climb an obstacle up to 150mm high.
+
+3. 4WD and heavy-duty tires gives you ability todrive on sand, snow, grass and other kind of surfaces. Now you movements not limited within smooth and flat floor in your home or paved roads around you house. You can drive in any directions and any surface conditions.
+
+4. 360 turn at the spot isn't a fantasy anymore. You can easily make turns on the spot with our wheel-chair.
+
+5. This wheel-chair equipped with LED headlights.Their much brighter and, what is very important, use 10 times less energy from your batteries
+
+6. Silicone batteries doesn't leak even you place it upside down, so you can put it in your luggage for air transportation.
+
+7. Cogitative Joystick PG NET provides uninterrupted and faultless work.
+
+8. Heavy-duty tires.
+</p>
 						</section>
 					</div>
 					<div class="col-md-4">
