--- a/OB-EW-003.html
+++ b/OB-EW-003.html
@@ -21,10 +21,10 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
 	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
@@ -122,7 +122,7 @@
 				<h1 class="page-title pull-left">Optimus: OB-EW-003</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Products</a></li>
-					<li><a href="#">4x4 Electric Wheelchairs</a></li>
+					<li><a href="4x4ElectricWheelchairs.html">4x4 Electric Wheelchairs</a></li>
 					<li class="active">Optimus: OB-EW-003</li>
 				</ol>
 			</div>
@@ -142,7 +142,43 @@
 						<section>
 							<h2 class="section-heading">Optimus: OB-EW-003 DESCRIPTION</h2>
 							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
-							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
+							<p>OB-EW-003 Optimus light version of the  Observer OB-EW-01 Maximus.
+ 
+The main difference is in the absence of a gyroscope, the chair still fixed in a horizontal position. In spite of this electric wheelchair has not lost its basic functions, but significantly dropped in price!
+
+Max speed 13km/h is available.
+ 
+1. it can climb obstacles up to 150mm.
+ 
+ 
+2.All wheel drive, solid tires will help you to drive on sand, snow, grass and other surfaces. Now you are not limited to smooth and level floor of your apartment, or even tarmac near your home. Move in any desired direction.
+ 
+ 
+3.360 ° around its axis, this is no longer science fiction. You can easily remain in the same place and  turn in the desired direction!
+ 
+ 
+4.The carriage is equipped with modern LED lights. They shine brightly. and most importantly use up to 10 times less energy your batteries.
+ 
+ 
+4.Silicone batteries do not flow, if they turn over, which means you'll be able to easily take them in her luggage during flights.
+ 
+ 
+8.Intelligent Joystick PG NET provides smooth operation and durability.
+ 
+ 
+5.A good range. 4pcs of battery each capacity of 27 Ah / hour  provide trip distance of 20km (the rise and cross country) to 25 km (horizontal solid surface), Li-battery would last for about 28-35km.
+ 
+6.The unique stability. Batteries are uniformly distributed along the longitudinal axis of the bottom of the chassis, powerful (1200W each) and hard drives are also mounted above the wheel axles are not. Due to what the designers have ensured that the common center of gravity wheelchair is an unprecedented low, providing a very high resistance simply on the principle of "dolls". The angle of shear resistance <30. Due to its short base can travel long ramp angles than any other stroller with all-wheel drive.
+ 
+7.Comfortable reclining, adjustable in height, width and angle, armrest. Easily adjustable headrest.
+ 
+8.An impressive range of accessories:
+•Heavy-duty 4-point safety harness
+•Rearview mirror
+•Umbrella holder
+•Aluminum ramps of varying length
+•Converter 12V to 220volt plugs into cigarette lighter which can be attached to a standard charger coming in complete with sidecar
+</p>
 						</section>
 					</div>
 					<div class="col-md-4">
