--- a/accessories.html
+++ b/accessories.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Portfolio | Repute - Responsive Multipurpose Bootstrap Theme</title>
+	<title>Observer Mobility | Accessories</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
-	<meta name="author" content="The Develovers">
+	<meta name="description" content="Observer Mobility">
+	<meta name="author" content="www.EveryDayKenneth.com">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -146,9 +146,9 @@
 						<li class="portfolio-item design">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">The Guitar</h4>
-								<p class="brief-description">Graphic Design</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Silicon Battery</h4>
+								<p class="brief-description">Silicon Battery</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work1.png" alt="This is the description">
@@ -157,9 +157,9 @@
 						<li class="portfolio-item ux">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">Skyscraper</h4>
-								<p class="brief-description">UX Design</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Beach Tire</h4>
+								<p class="brief-description">Beach Tire</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
@@ -168,9 +168,9 @@
 						<li class="portfolio-item photography">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">Heaven</h4>
-								<p class="brief-description">Photography</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">PU Tire</h4>
+								<p class="brief-description">PU Tire</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work4.png" alt="Portfolio Thumbnail">
@@ -179,9 +179,9 @@
 						<li class="portfolio-item photography ux">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">Raining</h4>
-								<p class="brief-description">Photography</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Side Pack</h4>
+								<p class="brief-description">Side Pack</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work5.png" alt="Portfolio Thumbnail">
@@ -190,9 +190,9 @@
 						<li class="portfolio-item photography ui">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">The Edge</h4>
-								<p class="brief-description">UI &amp; UX Design</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Back Pack</h4>
+								<p class="brief-description">Back Pack</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work6.png" alt="Portfolio Thumbnail">
@@ -201,9 +201,9 @@
 						<li class="portfolio-item photography">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">The Light</h4>
-								<p class="brief-description">Photography</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Cup Holder</h4>
+								<p class="brief-description">Cup Holder</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work7.png" alt="Portfolio Thumbnail">
@@ -212,9 +212,9 @@
 						<li class="portfolio-item photography">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">Magical Tea</h4>
-								<p class="brief-description">Photography</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Umbrella</h4>
+								<p class="brief-description">Umbrella</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work8.png" alt="Portfolio Thumbnail">
@@ -223,29 +223,96 @@
 						<li class="portfolio-item ui">
 							<div class="overlay"></div>
 							<div class="info">
-								<h4 class="title">Skyscraper</h4>
-								<p class="brief-description">UI Design</p>
-								<a href="#" class="btn">read more</a>
+								<h4 class="title">Air Cushion</h4>
+								<p class="brief-description">Air Cushion</p>
+								<a href="#" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
 								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item design">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Seat With Armrest 13" 18" 20"</h4>
+								<p class="brief-description">Seat With Armrest 13" 18" 20"</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work1.png" alt="This is the description">
+							</div>
+						</li>
+						<li class="portfolio-item ux">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">4 Points Safety Belt</h4>
+								<p class="brief-description">4 Points Safety Belt</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item photography">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Power Inverter</h4>
+								<p class="brief-description">Power Inverter</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work4.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item photography ux">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Alarm System</h4>
+								<p class="brief-description">Alarm System</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work5.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item photography ui">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Wheelchair Cover</h4>
+								<p class="brief-description">Wheelchair Cover</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work6.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item photography">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Umbrella Holder</h4>
+								<p class="brief-description">Umbrella Holder</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work7.png" alt="Portfolio Thumbnail">
+							</div>
+						</li>
+						<li class="portfolio-item photography">
+							<div class="overlay"></div>
+							<div class="info">
+								<h4 class="title">Rear View Mirror</h4>
+								<p class="brief-description">Rear View Mirror</p>
+								<a href="#" class="btn">learn more</a>
+							</div>
+							<div class="media-wrapper">
+								<img src="assets/img/portfolio/800x800/work8.png" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 					</ul>
 				</div>
 				<!-- END PORTFOLIO ITEM WRAPPER -->
 				<!-- PAGINATION -->
-				<div class="text-center">
-					<ul class="pagination">
-						<li><a href="#"><i class="fa fa-angle-left"></i><span class="sr-only">Previous</span></a></li>
-						<li><a href="#">1</a></li>
-						<li class="active"><a href="#">2</a></li>
-						<li><a href="#">3</a></li>
-						<li><a href="#">4</a></li>
-						<li><a href="#">5</a></li>
-						<li><a href="#"><i class="fa fa-angle-right"></i><span class="sr-only">Next</span></a></li>
-					</ul>
-				</div>
+
 				<!-- END PAGINATION -->
 			</div>
 		</div>
@@ -314,8 +381,8 @@
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
+								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -324,7 +391,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 The Develovers. All Rights Reserved.
+				&copy;2016 Observer Mobility. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
