accessories pages added

--- a/accessories.html
+++ b/accessories.html
@@ -148,10 +148,10 @@
 							<div class="info">
 								<h4 class="title">Silicon Battery</h4>
 								<p class="brief-description">Silicon Battery</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="siliconBattery.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work1.png" alt="This is the description">
+								<img src="assets/img/portfolio/800x800/accessories/battery.jpg" alt="This is the description">
 							</div>
 						</li>
 						<li class="portfolio-item ux">
@@ -159,10 +159,10 @@
 							<div class="info">
 								<h4 class="title">Beach Tire</h4>
 								<p class="brief-description">Beach Tire</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="beachTire.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/beachtire.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -170,10 +170,10 @@
 							<div class="info">
 								<h4 class="title">PU Tire</h4>
 								<p class="brief-description">PU Tire</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="puTire.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work4.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/putire.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ux">
@@ -181,10 +181,10 @@
 							<div class="info">
 								<h4 class="title">Side Pack</h4>
 								<p class="brief-description">Side Pack</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="sidePack.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work5.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/sidepouch.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ui">
@@ -192,10 +192,10 @@
 							<div class="info">
 								<h4 class="title">Back Pack</h4>
 								<p class="brief-description">Back Pack</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="backPack.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work6.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/carrypouch.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -203,10 +203,10 @@
 							<div class="info">
 								<h4 class="title">Cup Holder</h4>
 								<p class="brief-description">Cup Holder</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="cupHolder.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work7.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/holder.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -214,10 +214,10 @@
 							<div class="info">
 								<h4 class="title">Umbrella</h4>
 								<p class="brief-description">Umbrella</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="umbrella.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work8.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/umbrella.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item ui">
@@ -225,10 +225,10 @@
 							<div class="info">
 								<h4 class="title">Air Cushion</h4>
 								<p class="brief-description">Air Cushion</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="airCushion.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/seat.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item design">
@@ -236,10 +236,10 @@
 							<div class="info">
 								<h4 class="title">Seat With Armrest 13" 18" 20"</h4>
 								<p class="brief-description">Seat With Armrest 13" 18" 20"</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="seatWithArmrest.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work1.png" alt="This is the description">
+								<img src="assets/img/portfolio/800x800/accessories/seatwitharmrest.jpg" alt="This is the description">
 							</div>
 						</li>
 						<li class="portfolio-item ux">
@@ -247,10 +247,10 @@
 							<div class="info">
 								<h4 class="title">4 Points Safety Belt</h4>
 								<p class="brief-description">4 Points Safety Belt</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="4PointsSafetyBelt.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work3.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/belts.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -258,10 +258,10 @@
 							<div class="info">
 								<h4 class="title">Power Inverter</h4>
 								<p class="brief-description">Power Inverter</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="powerInverter.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work4.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/charger.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ux">
@@ -269,10 +269,10 @@
 							<div class="info">
 								<h4 class="title">Alarm System</h4>
 								<p class="brief-description">Alarm System</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="alarmSystem.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work5.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/alarm.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography ui">
@@ -280,10 +280,10 @@
 							<div class="info">
 								<h4 class="title">Wheelchair Cover</h4>
 								<p class="brief-description">Wheelchair Cover</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="wheelchairCover.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work6.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/cover.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -291,10 +291,10 @@
 							<div class="info">
 								<h4 class="title">Umbrella Holder</h4>
 								<p class="brief-description">Umbrella Holder</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="umbrellaHolder.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work7.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/uholder.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 						<li class="portfolio-item photography">
@@ -302,10 +302,10 @@
 							<div class="info">
 								<h4 class="title">Rear View Mirror</h4>
 								<p class="brief-description">Rear View Mirror</p>
-								<a href="#" class="btn">learn more</a>
+								<a href="rearViewMirror.html" class="btn">learn more</a>
 							</div>
 							<div class="media-wrapper">
-								<img src="assets/img/portfolio/800x800/work8.png" alt="Portfolio Thumbnail">
+								<img src="assets/img/portfolio/800x800/accessories/mirror.jpg" alt="Portfolio Thumbnail">
 							</div>
 						</li>
 					</ul>
