--- a/airCushion.html
+++ b/airCushion.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-	<title>Observer Mobility | Customer Support</title>
+	<title>Observer Mobility | Air Cushion</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Observer Mobility">
-	<meta name="author" content="www.EveryDayKenneth.com">
+	<meta name="description" content="Responsive Multipurpose Bootstrap Theme">
+	<meta name="author" content="The Develovers">
 	<!-- CSS -->
 	<link href="assets/css/bootstrap.css" rel="stylesheet" type="text/css">
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/observer144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/observer114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/observer72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/observer57x57.png">
-	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
+	<link rel="shortcut icon" href="assets/ico/favicon.png">
 </head>
 
 <body>
@@ -77,7 +77,7 @@
 						<i class="fa fa-bars"></i>
 					</button>
 					<a href="index.html" class="navbar-brand navbar-logo navbar-logo-bigger">
-						<img src="assets/img/logo/observer-logo.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
+						<img src="assets/img/logo/repute-logo-nav.png" alt="Repute - Responsive Multipurpose Bootstrap Theme">
 					</a>
 				</div>
 				<!-- MAIN NAVIGATION -->
@@ -119,12 +119,11 @@
 		<!-- BREADCRUMBS -->
 		<div class="page-header">
 			<div class="container">
-				<h1 class="page-title pull-left">CUSTOMER SUPPORT</h1>
+				<h1 class="page-title pull-left">PORTFOLIO</h1>
 				<ol class="breadcrumb">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">UI Elements</a></li>
-					<li><a href="#">Forms</a></li>
-					<li class="active">Customer Support</li>
+					<li><a href="#">Portfolio</a></li>
+					<li class="active">Portfolio Item</li>
 				</ol>
 			</div>
 		</div>
@@ -132,158 +131,78 @@
 		<!-- PAGE CONTENT -->
 		<div class="page-content">
 			<div class="container">
+				<!-- PORTFOLIO ITEM -->
+				<div class="portfolio-media media-carousel">
+					<div><img src="assets/img/portfolio/single/bicycle.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/blurred_lines.jpg" class="img-responsive" alt="Portfolio Item"></div>
+					<div><img src="assets/img/portfolio/single/edge.jpg" class="img-responsive" alt="Portfolio Item"></div>
+				</div>
 				<div class="row">
-
-					<div class="col-md-9">
-						<!-- BASIC INPUT -->
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<h2 class="panel-title section-heading no-margin">Customer Support Form</h2>
-							</div>
-							<div class="panel-body">
-								<div class="form-horizontal">
-									<div class="form-group">
-										<label class="col-md-2 control-label">Text Field</label>
-										<div class="col-md-10">
-											<input type="text" class="form-control" placeholder="text field">
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Password</label>
-										<div class="col-md-10">
-											<input type="password" class="form-control" value="asecret">
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Textarea</label>
-										<div class="col-md-10">
-											<textarea class="form-control" placeholder="textarea" rows="4"></textarea>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Select</label>
-										<div class="col-md-10">
-											<select class="form-control">
-												<option value="cheese">Cheese</option>
-												<option value="tomatoes">Tomatoes</option>
-												<option value="mozarella">Mozzarella</option>
-												<option value="mushrooms">Mushrooms</option>
-												<option value="pepperoni">Pepperoni</option>
-												<option value="onions">Onions</option>
-											</select>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Multiple</label>
-										<div class="col-md-10">
-											<select multiple class="form-control">
-												<option value="cheese">Cheese</option>
-												<option value="tomatoes">Tomatoes</option>
-												<option value="mozarella">Mozzarella</option>
-												<option value="mushrooms">Mushrooms</option>
-												<option value="pepperoni">Pepperoni</option>
-												<option value="onions">Onions</option>
-											</select>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Checkbox</label>
-										<div class="col-md-10">
-											<div class="checkbox">
-												<label>
-													<input type="checkbox" value="item1">Item 1
-												</label>
-											</div>
-											<div class="checkbox">
-												<label>
-													<input type="checkbox" value="item2">Item 2
-												</label>
-											</div>
-											<div class="checkbox">
-												<label>
-													<input type="checkbox" value="item3">Item 3
-												</label>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Inline</label>
-										<div class="col-md-10">
-											<label class="checkbox-inline">
-												<input type="checkbox" value="item1">Item 1
-											</label>
-											<label class="checkbox-inline">
-												<input type="checkbox" value="item2">Item 2
-											</label>
-											<label class="checkbox-inline">
-												<input type="checkbox" value="item3">Item 3
-											</label>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Radio Button</label>
-										<div class="col-md-10">
-											<div class="radio">
-												<label>
-													<input type="radio" name="radio" value="radio1">Radio Item 1
-												</label>
-											</div>
-											<div class="radio">
-												<label>
-													<input type="radio" name="radio" value="radio2">Radio Item 2
-												</label>
-											</div>
-											<div class="radio">
-												<label>
-													<input type="radio" name="radio" value="radio3">Radio Item 3
-												</label>
-											</div>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-md-2 control-label">Inline</label>
-										<div class="col-md-10">
-											<label class="radio radio-inline">
-												<input type="radio" name="radioinline" value="radio1">Radio Item 1
-											</label>
-											<label class="radio radio-inline">
-												<input type="radio" name="radioinline" value="radio2">Radio Item 2
-											</label>
-											<label class="radio radio-inline">
-												<input type="radio" name="radioinline" value="radio3">Radio Item 3
-											</label>
-										</div>
-									</div>
-									<div class="form-group">
-										<label for="exampleInputFile" class="col-md-2 control-label">File input</label>
-										<div class="col-md-10">
-											<input type="file" id="exampleInputFile">
-											<p class="help-block">
-												<em>Example block-level help text here.</em>
-											</p>
-										</div>
-									</div>
-									<div class="form-group">
-										<label class="col-sm-2 control-label">Static Control</label>
-										<div class="col-sm-10">
-											<p class="form-control-static">email@example.com</p>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<!-- END BASIC INPUT -->
-						<!-- INPUT GROUPS -->
-
-						<!-- END INPUT GROUPS -->
-						<!-- CONTROL HEIGHT SIZING -->
-
-						<!-- END CONTROL HEIGHT SIZING -->
-						<!-- CONTROL COLUMN SIZING -->
-
-						<!-- END CONTROL COLUMN SIZING -->
+					<div class="col-md-8">
+						<section>
+							<h2 class="section-heading">PROJECT DESCRIPTION</h2>
+							<p class="lead">Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products.</p>
+							<p>Dynamically syndicate open-source content through global potentialities. Proactively cultivate optimal potentialities after bricks-and-clicks technologies. Compellingly empower extensible benefits and holistic bandwidth. Professionally expedite client-based schemas before resource-leveling vortals. Professionally enable customer directed intellectual capital via highly efficient convergence. Continually customize alternative results with cross-media action items. Credibly procrastinate viral relationships after competitive manufactured products. Compellingly harness viral ideas through wireless services. Holisticly utilize future-proof networks rather than granular communities. Proactively.</p>
+						</section>
+					</div>
+					<div class="col-md-4">
+						<section>
+							<h2 class="section-heading">PROJECT DETAIL</h2>
+							<ul class="list-unstyled project-detail-list">
+								<li><strong>Title:</strong> Awesome Photography</li>
+								<li><strong>Client:</strong> Digital House Inc.</li>
+								<li><strong>Skills:</strong> Photography, Lightroom, Photoshop</li>
+								<li><strong>Categories:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
+							</ul>
+							<a href="#" class="btn btn-default"><i class="fa fa-external-link"></i> Visit Website</a>
+						</section>
 					</div>
 				</div>
+				<!-- END PORTFOLIO ITEM -->
+				<hr>
+				<!-- RELATED PORTFOLIO -->
+				<div class="portfolio-item-wrapper portfolio-related">
+					<h2 class="section-heading">RELATED WORKS</h2>
+					<ul class="portfolio-item-list spaced row">
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">The Guitar</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work1.png" alt="This is the description">
+								</div>
+							</div>
+						</li>
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">Skyscraper</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work3.png" alt="Portfolio Thumbnail">
+								</div>
+							</div>
+						</li>
+						<li class="col-md-4">
+							<div class="portfolio-item">
+								<div class="overlay"></div>
+								<div class="info">
+									<h4 class="title">Heaven</h4>
+									<a href="#" class="btn">read more</a>
+								</div>
+								<div class="media-wrapper">
+									<img src="assets/img/portfolio/800x500/work4.png" alt="Portfolio Thumbnail">
+								</div>
+							</div>
+						</li>
+					</ul>
+				</div>
+				<!-- END RELATED PORTFOLIO -->
 			</div>
 		</div>
 		<!-- END PAGE CONTENT -->
@@ -294,7 +213,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/observer-logo.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/repute-logo-light.png" class="logo" alt="Repute">
 						<p>Proactively aggregate B2B initiatives before extensive channels. Monotonectally extend interactive methods of empowerment through excellent applications. Rapidiously synergize visionary products with sticky technology.</p>
 						<br>
 						<address class="margin-bottom-30px">
@@ -351,8 +270,8 @@
 							<ul class="list-inline social-icons">
 								<li><a href="#" class="facebook-bg"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#" class="twitter-bg"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="googleplus-bg"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="rss-bg"><i class="fa fa-wechat"></i></a></li>
+								<li><a href="#" class="googleplus-bg"><i class="fa fa-google-plus"></i></a></li>
+								<li><a href="#" class="rss-bg"><i class="fa fa-rss"></i></a></li>
 							</ul>
 						</div>
 						<!-- END COLUMN 3 -->
@@ -361,7 +280,7 @@
 			</div>
 			<!-- COPYRIGHT -->
 			<div class="text-center copyright">
-				&copy;2016 Observer Mobility. All Rights Reserved.
+				&copy;2016 The Develovers. All Rights Reserved.
 			</div>
 			<!-- END COPYRIGHT -->
 		</footer>
@@ -371,6 +290,7 @@
 	<!-- JAVASCRIPTS -->
 	<script src="assets/js/jquery-2.1.1.min.js"></script>
 	<script src="assets/js/bootstrap.min.js"></script>
+	<script src="assets/js/plugins/slick/slick.min.js"></script>
 	<script src="assets/js/plugins/autohidingnavbar/jquery.bootstrap-autohidingnavbar.min.js"></script>
 	<script src="assets/js/repute-scripts.js"></script>
 	
